ROS_Workspace/src/log/build_2023-08-04_15-05-04/Konig/stderr.log
  File "/home/max/Desktop/VisionCode/Honours_a1797823_a1764124/ROS_Workspace/src/install/Konig/lib/python3.8/site-packages/Konig/Konig.py", line 67
    while(1==1)
              ^
SyntaxError: invalid syntax

